# bugfix-agent-lab

./: .gitignore  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugfix-harness.yml
.github/workflows/: deploy-pages.yml  issue-bugfix.yml
harness/: __init__.py  allowlist.py  artifacts.py  client.py  config.py  decisions.py  gemini_main.py  loop.py  main.py  prompts.py  response_api.py  task.py  test_allowlist.py  test_gemini_main.py  test_loop.py  test_main.py  tool_utils.py  tools.py
target-project/: AGENTS.md
target-project/backend/: pyproject.toml
target-project/backend/app/: __init__.py  main.py  models.py  repository.py  service.py
target-project/backend/data/: todos.json
target-project/backend/tests/: test_api.py  test_service.py
target-project/docs/: architecture.md  code-map.md  rules.md  ui-spec.md
target-project/frontend/: index.html  package-lock.json  package.json  vite.config.ts
target-project/frontend/src/: App.tsx  demoData.ts  demoStorage.ts  styles.css
target-project/frontend/src/components/: TodoRow.tsx
